docs/content/v2.2/yugabyte-platform/security/_index.md
---
title: Security
headerTitle: Security
linkTitle: Security
description: Secure Yugabyte Platform and YugabyteDB universes.
image: /images/section_icons/index/secure.png
headcontent: Secure Yugabyte Platform and your YugabyteDB universes.
menu:
  v2.2:
    parent: yugabyte-platform
    identifier: security
weight: 645
---

<div class="row">

  <div class="col-12 col-md-6 col-lg-12 col-xl-6">
    <a class="section-link icon-offset" href="security-checklist-yp/">
      <div class="head">
        <img class="icon" src="/images/section_icons/secure/checklist.png" aria-hidden="true" />
        <div class="title">Security checklist</div>
      </div>
      <div class="body">
        Security considerations for Yugabyte Platform and YugabyteDB universes.
      </div>
    </a>
  </div>

  <div class="col-12 col-md-6 col-lg-12 col-xl-6">
    <a class="section-link icon-offset" href="customize-ports/">
      <div class="head">
       <img class="icon" src="/images/section_icons/index/secure.png" />
        <div class="title">Customize ports</div>
      </div>
      <div class="body">
        Customize ports
      </div>
    </a>
  </div>

   <div class="col-12 col-md-6 col-lg-12 col-xl-6">
    <a class="section-link icon-offset" href="authorization-platform/">
      <div class="head">
        <img class="icon" src="/images/section_icons/secure/authorization.png" aria-hidden="true" />
        <div class="title">Authorization platform</div>
      </div>
      <div class="body">
        Use Yugabyte Platform to manager users and roles.
      </div>
    </a>
  </div>

  <div class="col-12 col-md-6 col-lg-12 col-xl-6">
    <a class="section-link icon-offset" href="enable-encryption-at-rest/">
      <div class="head">
        <img class="icon" src="/images/section_icons/secure/tls-encryption.png" />
        <div class="title">Enable encryption at rest</div>
      </div>
      <div class="body">
        Use Yugabyte Platform to enable encryption at rest and protect data in storage.
      </div>
    </a>
  </div>

  <div class="col-12 col-md-6 col-lg-12 col-xl-6">
    <a class="section-link icon-offset" href="enable-encryption-in-transit/">
      <div class="head">
       <img class="icon" src="/images/section_icons/secure/tls-encryption.png" />
        <div class="title">Enable encryption in transit (TLS)</div>
      </div>
      <div class="body">
        Use Yugabyte Platform to enable encryption in transit using TLS and protect data between nodes and clients.
      </div>
    </a>
  </div>

  <div class="col-12 col-md-6 col-lg-12 col-xl-6">
    <a class="section-link icon-offset" href="network-security/">
      <div class="head">
        <img class="icon" src="/images/section_icons/index/secure.png" aria-hidden="true" />
        <div class="title">Network security</div>
      </div>
      <div class="body">
        Restrict machine and port access to run in trusted network environments.
      </div>
    </a>
  </div>

</div>